Group Two added a change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="map"></div>
             <div id="directions"></div>
+            <div id="lost"></div>
         </div>
     </body>
 </html>
-
